# CloakBrowser

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.api  README.md  README.th.md  SECURITY.md  SOCKS5_UDP_IMPLEMENTATION.md  cloudflare_bypass.py  cloudflare_bypass_v2.py  cloudflare_bypass_v3.py  cloudflare_bypass_v4_tor.py  cloudflare_bypass_v5_pro.py  docker-compose.yml  flake.nix  fqoasij6pfmio5q7nqmphgkpvne8ipjt.darc  manifest  pyproject.toml  workflow.md
.github/workflows/: build-deploy.yml  ci.yml  publish.yml  release-binary.yml
.sisyphus/: boulder.json
.sisyphus/plans/: fix-ci-errors.md  github-actions-workflow.md  windows-build-actions.md  windows-cdp-support.md
cloakbrowser/: __init__.py  __main__.py  browser.py  config.py  download.py  extensions.py  geoip.py  proxy_rotator.py  stealth_eval.py  text_utils.py
cloakbrowser/cli/: __init__.py  _launch.py  doctor.py  dump.py  eval.py  open.py  profile.py  screenshot.py
cloakbrowser/human/: __init__.py  config.py  keyboard.py  keyboard_async.py  scroll.py  scroll_async.py
cloakbrowser/pxbypass/: README.md  __init__.py  config.py  detector.py  engine.py  solver.py
cloakbrowser/socks5udp/: __init__.py  client.py  protocol.py
examples/: docker-compose.gpu.yml  extensions_example.py  external_playwright.py  fingerprint_scan_test.py  ifood_px_bypass.py  macos_profile_launcher.py  persistent_context.py  proxy_rotation.py  proxy_verify.py  px_bypass_test.py  recaptcha_score.py  socks5_udp_example.py  stealth_test.py  windows_example.py
js/: README.md  package-lock.json  package.json  tsup.config.ts
js/examples/: proxy-rotation.ts  windows-example.ts
js/src/: args.ts  cli.ts  config.ts  download.ts  geoip.ts  index.ts  playwright.ts  proxy-rotator.ts  proxy.ts  puppeteer.ts  stealth-eval.ts  types.ts
js/tests/: build-launch-options.test.ts  cdp.test.ts  cli.test.ts  config.test.ts  connect.test.ts  extension-loading.test.ts  geoip.test.ts  humanize.test.ts  launch.test.ts  platform.test.ts  proxy-rotator.test.ts  proxy.test.ts  puppeteer.test.ts  stealth.puppeteer.test.ts  (+2 more)
patches/: README.md
plan/: windows-stealth-fix.md
rust/: .gitignore  Cargo.toml  README.md
rust/cloakbrowser/: Cargo.toml
rust/cloakbrowser-cli/: Cargo.toml
rust/cloakbrowser-cli/src/: main.rs
rust/cloakbrowser/src/: config.rs  diagnostics.rs  download.rs  error.rs  geoip.rs  launch.rs  lib.rs  license.rs  log.rs  options.rs  proxy.rs  version.rs  widevine.rs
rust/cloakbrowser/src/human/: config.rs  keyboard.rs  mod.rs  mouse.rs  page.rs  scroll.rs
rust/examples/: basic.rs  humanize.rs  persistent_context.rs
scripts/: WINDOWS_BUILD.md  build-windows.bat  build-windows.ps1
tests/: conftest.py  quick_check.py  test_build_args.py  test_build_launch_options.py  test_cdp.py  test_cli.py  test_cloakserve.py  test_config.py  test_connect.py  test_context_geoip_warning.py  test_extension_loading.py  test_extensions.py  test_extensions_integration.py  test_extract.py  test_geoip.py  test_geoip_launch_warning.py  test_human_visual.py  test_humanize_unit.mjs  test_humanize_unit.py  test_launch_context.py  test_persistent_context.py  test_platform.py  test_proxy.py  test_proxy_real.mjs  test_proxy_real.py  test_proxy_rotator.py  test_pxbypass.py  test_pxbypass_fixture.py  test_socks5_udp.py  test_stealth.py  test_supplychain_hardening.py  test_text_utils.py  test_update.py
(+40 files in other folders)
